[package]
name = "valley"
version = "0.1.0"
edition = "2021"


[dependencies]
log = "0.4"
bytes = "1.1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
async-trait = "0.1"
quinn = "0.8"
rustls = { version = "0.20.3", default-features = false, features = ["quic", "dangerous_configuration"] }
rcgen = "0.9"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
structopt = "0.3"
env_logger = "0.9.0"